--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "test":  "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
